--- a/TelegramWeatherBot/Settings/Configs.json
+++ b/TelegramWeatherBot/Settings/Configs.json
@@ -1,5 +1,5 @@
 {
   "Url": "",
-  "ApiKey": "1311935608:AAF9tEcGO40hv42hlNP-Q9Y-CAE4Eq-h3hw",
+  "ApiKey": "your_key",
   "Name": "reliable_weather_bot"
 }
