Implemented api feedback

--- a/TelegramWeatherBot/Settings/Configs.json
+++ b/TelegramWeatherBot/Settings/Configs.json
@@ -1,5 +1,9 @@
 {
   "Url": "",
   "ApiKey": "1311935608:AAF9tEcGO40hv42hlNP-Q9Y-CAE4Eq-h3hw",
-  "Name": "reliable_weather_bot"
+  "Name": "reliable_weather_bot",
+  "RabbitMQ": "localhoste",
+  "RabbitLogin": "TelegramBot",
+  "RabbitPassword": "TelegramBot",
+  "RabbitQueue": "WeatherApi"
 }
