--- a/TelegramWeatherBot/TelegramWeatherBot.csproj
+++ b/TelegramWeatherBot/TelegramWeatherBot.csproj
@@ -8,4 +8,9 @@
     <PackageReference Include="Telegram.Bot" Version="15.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Credentials\Credentials.csproj" />
+    <ProjectReference Include="..\RabbitChat\RabbitChat\RabbitChat.csproj" />
+  </ItemGroup>
+
 </Project>
